Fixed an issue where configuration views would expand too wide
TFPC-63 #done

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -47,6 +47,13 @@ button:hover {
   background-color: #007095;
 }
 
+.scroll-container {
+  max-width: 1280px;
+
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .footer {
   position: fixed;
   bottom: 0;
